SigmaCodebackup3rdSep/objects/Project_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Billing_Amount__c</fullName>
        <formula>Billing_Rate__c *  Actual_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excepted_Billing_Amount__c</fullName>
        <formula>Billing_Rate__c  *  Estimated_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excepted Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone assigned</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Resource Name</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Allocate Resources</relationshipLabel>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Developer Level-1</fullName>
                </value>
                <value>
                    <fullName>Developer Level-2</fullName>
                </value>
                <value>
                    <fullName>Developer Level-3</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Requirement Designer</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>UI Developer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allocate Resource</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocate Resources</pluralLabel>
    <recordTypes>
        <fullName>Allocate_Resource_for_MR_Resource_Planning</fullName>
        <active>true</active>
        <label>Allocate Resource for MR Resource Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Allocate_Resource_for_Project_Management</fullName>
        <active>true</active>
        <label>Allocate Resource for Project Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sigma_Project</fullName>
        <active>true</active>
        <label>Sigma Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AssignoleforeachResource</fullName>
        <active>false</active>
        <description>Assign any role for the resource</description>
        <errorConditionFormula>ISPICKVAL(Roles__c ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Roles__c</errorDisplayField>
        <errorMessage>Please assign a role for the resource</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_project_and_resource</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Project2__c==null, Resource__c== null)</errorConditionFormula>
        <errorMessage>Select Both Project And Resource Fields</errorMessage>
    </validationRules>
</CustomObject>